[package]
name = "memtest"
description = "A library for detecting faulty memory"
version = "0.1.0"
authors = ["Brian Tsoi"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/BrianShTsoi/memtest"
repository = "https://github.com/BrianShTsoi/memtest"
readme = "README.md"

[dependencies]
anyhow = "1.0"
libc = "0.2"
num_cpus = "1.0"
rand = "0.8.4"
region = "3.0.2"
tracing = "0.1.40"

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_System_SystemInformation", 
  "Win32_System_Threading",
]    

[dev-dependencies]
tracing-subscriber = "0.3.18"
