[package]
name = "memtest"
description = "A library for detecting faulty memory"
version = "0.1.0"
authors = ["Brian Tsoi <brian.s.tsoi@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/BrianShTsoi/memtest"
repository = "https://github.com/BrianShTsoi/memtest"
keywords = ["memory", "stability"]
readme = "README.md"

[dependencies]
anyhow = "1.0.69"
libc = "0.2.158"
num_cpus = "1.16.0"
rand = "0.8.5"
tracing = "0.1.37"

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_System_SystemInformation", 
  "Win32_System_Threading",
]    

[dev-dependencies]
tracing-subscriber = "0.3.18"
